<resources>
    <string name="app_name">吃了么</string>
    <string name="user_name">游客登录</string>
    <string name="add_item">添加项目</string>
    <string name="add_alarm">添加提醒</string>
    <string name="all">全部物品</string>
    <string name="all_item">全部物品</string>
    <string name="outofdate">即将过期</string>
    <string name="ge">项</string>
    <string name="settings">设置</string>
    <string name="changeaccount">切换账号</string>
    <string name="myfamily">我的家庭</string>
    <string name="myitem">我的物品</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">用户注册</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="username">账号</string>
    <string name="usernickname">昵称</string>
    <string name="rec_data">恢复数据</string>
    <string name="save_data">备份数据</string>
    <string name="clear">清空数据</string>
    <string name="family">家庭</string>
    <string name="family_statue">我的家庭地位</string>
    <string name="log_out">退出程序</string>
    <string name="list_name">项目列表</string>
    <string name="family_group">家庭组</string>
    <string name="search_input">搜索</string>
    <string name="remind_himorher">提醒TA</string>
    <string name="title_allitem">全部</string>
    <string name="title_food">食品</string>
    <string name="title_medicine">药品</string>
    <string name="title_reminding">提醒项</string>
    <string name="title_allmember">全部</string>
    <string name="title_share">共享用户</string>
    <string name="title_reminded">提醒TA</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="recordinfo">输入</string>
    <string name="kinds">种类 *</string>
    <string name="name">物品名称 *</string>
    <string name="makedate">生产日期 *</string>
    <string name="lasts">保质期 *</string>
    <string name="exp">过期日期</string>
    <string name="clock">闹钟</string>
    <string name="store">存放位置</string>
    <string name="inputname">请输入物品名称</string>
    <string name="selectdate">请点击选择日期</string>
    <string name="out_of_date">输入产期与保质期将自动选择（尚未实现）</string>
    <string name="checkclock">是否设定闹钟</string>
    <string name="inputstore">请输入存放物品的位置</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="tips">(带"*"项为必填项)</string>
    <string name="hours">时</string>
    <string name="minute">分</string>
    <string name="setalarm">设置闹钟</string>
    <string name="rememberpassword">记住密码</string>
    <string name="et_username">请输入用户名</string>
    <string name="et_password">请输入密码</string>
    <string name="et_usernickname">请输入昵称</string>
    <string name="et_password_again">请再次输入密码</string>
    <string name="wrong_password">密码错误</string>
    <string name="password_again">确认密码</string>
    <string name="registerok">注册</string>
    <string name="name_already_exist">用户名已存在</string>
    <string name="pwd_not_the_same">两次输入的密码不相同</string>
    <string name="register_fail">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="usernickname_empty">昵称不能为空</string>
    <string name="username_empty">用户名不能为空</string>
    <string name="pwd_empty">密码不能为空</string>
    <string name="pwd_check_empty">第二次密码输入不能为空</string>
    <string name="etpwd_old">请输入您的旧密码</string>
    <string name="etpwd_new">请输入您的新密码</string>
    <string name="pwd_old">旧密码</string>
    <string name="pwd_new">新密码</string>
    <string name="reset">确认修改</string>
    <string name="reset_nickname">修改昵称</string>
    <string name="resetpwd_fail">密码修改失败</string>
    <string name="resetnickname_success">昵称修改成功</string>
    <string name="resetnickname_fail">昵称修改失败</string>
    <string name="resetpwd_success">密码修改成功</string>
    <string name="pwd_not_fit_user">用户名和密码不匹配</string>
    <string name="name_not_exist">用户名不存在</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
</resources>
