<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.main_interface.SpinnerActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/listofitem_recordinfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="55dp"
            android:gravity="center"
            android:text="@string/recordinfo"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:background="@color/lucency"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/linearLayout3"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/makedate"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp"
            android:gravity="center"
            android:text="@string/makedate"
            />

        <Button
            android:id="@+id/selectDate"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:background="@drawable/stroke"
            android:text="@string/selectdate"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:onClick="selectDate"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        android:id="@+id/linearLayout4"
        tools:layout_editor_absoluteY="239dp">

        <TextView
            android:id="@+id/lasts"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:textSize="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/lasts" />

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/monthET"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_weight="5"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:inputType="number"
                android:background="@drawable/stroke"/>

            <TextView
                android:id="@+id/month"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="0dp"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/month" />

            <EditText
                android:id="@+id/dayET"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_weight="5"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:textSize="16dp"
                android:inputType="number"
                android:textColor="@color/black"
                android:background="@drawable/stroke"/>

            <TextView
                android:id="@+id/day"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="0dp"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/day" />



        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/linearLayout5">

        <TextView
            android:id="@+id/exp"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp"
            android:gravity="center"
            android:text="@string/exp" />

        <Button
            android:id="@+id/outofDate"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:background="@drawable/stroke"
            android:text="@string/outofdate"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:onClick="outofDate"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.555"
        android:id="@+id/linearLayout2"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <TextView
            android:id="@+id/kindsTV"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/kinds"
            android:textSize="16dp"
            android:textColor="@color/colorPrimaryDark"/>

        <Spinner
            android:id="@+id/spinner_kinds"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/spinner_arrow"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:spinnerMode="dropdown"
            android:dropDownSelector="@color/colorPrimaryDark" />
        <!--定义一个食品种类的选择框-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/linearLayout6"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/clock"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp"
            android:gravity="center"
            android:text="@string/clock" />


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox"
                style="@android:style/Widget.Holo.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:text="@string/checkclock"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:theme="@color/colorPrimaryDark" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        tools:layout_editor_absoluteX="5dp"
        android:id="@+id/linearLayout7">

        <TextView
            android:id="@+id/store"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp"
            android:gravity="center"
            android:text="@string/store" />

        <EditText
            android:id="@+id/placeET"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:background="@drawable/stroke"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:hint="@string/inputstore" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:text="@string/name"
            android:textSize="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"/>

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:background="@drawable/stroke"
            android:hint="@string/inputname"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:inputType="textPersonName" />

    </LinearLayout>

    <TextView
        android:id="@+id/tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/tips"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

    <Button
        android:id="@+id/complete"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/stroke"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
